Fix an issue where the icon and file name overlap when a file is attached

--- a/src/styles/components/_inputs.scss
+++ b/src/styles/components/_inputs.scss
@@ -1,4 +1,4 @@
-$input-padding: 4px 6px;
+$input-padding: 4px 6px 4px 20px;;
 $color-input-bg: #ffffff;
 $color-disabled-input-bg: #ebebe4;
 $color-input-text: #2b2f33;
